# chat-api

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml
app/: enums.py  main.py  models.py  schemas.py  settings.py
app/api/: __init__.py
app/api/auth/: dependencies.py  router.py  services.py
