[project]
name = "chat-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.5",
    "pydantic-settings>=2.6.1",
    "pyjwt[crypto]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
]


[dependency-groups]
dev = []


[tool.ruff]
line-length = 120
lint.select = ['I', 'F', 'E', 'W', 'N', 'UP', 'B', 'SIM']
lint.ignore = ['B008', 'B904']


[tool.ruff.lint.isort]
lines-after-imports = 2


[tool.ruff.format]
quote-style = "single"
